--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 sudo: true
 dist: trusty
 #trusty may be the incorrect distro. Check this if there are problems
-jdk: oraclejdk8
+jdk: openjdk8
 addons:
  apt:
    packages:
