--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ jdk: openjdk8
 addons:
  apt:
    packages:
-     - oracle-java8-installer
+     - open-java8-installer
 before_install:
  - chmod +x mvnw
