--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: java
 sudo: true
-dist: trusty
-#trusty may be the incorrect distro. Check this if there are problems
-jdk: openjdk8
+jdk: oraclejdk8
 addons:
  apt:
    packages:
-     - open-java8-installer
+     - oracle-java8-installer
 before_install:
  - chmod +x mvnw
