--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,13 @@ dist: trusty
 sudo: true
 jdk: oraclejdk8
 addons:
+ postgresql: "9.6"
  apt:
    packages:
      - oracle-java8-installer
 before_install:
+ - psql -c "create database db-production;" -U postgres
+ - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'postgres'"
  - chmod +x mvnw
+services:
+  - postgresql
