--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ addons:
    packages:
      - oracle-java8-installer
 before_install:
- - chmod +x mvnw
+- cd server
+- psql -c "create database db-production;" -U postgres
+- sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'postgres'"
+- chmod +x mvnw
 services:
-  - postgresql
+- postgresql
