--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ dist: trusty
 sudo: enabled
 jdk: oraclejdk8
 env:
-  - DATABASE_NAME=postgres
-  - JDBC_SCHEMA=userservice
-  - JDBC_URL=35.226.77.90
-  - JDBC_USERNAME=postgres
-  - JDBC_PASSWORD=yL4afwJexnAlg7OA
+  - DATABASE_NAME="postgres"
+  - JDBC_SCHEMA="userservice"
+  - JDBC_URL="35.226.77.90"
+  - JDBC_USERNAME="postgres"
+  - JDBC_PASSWORD="yL4afwJexnAlg7OA"
