--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,23 @@ language: java
 dist: trusty
 sudo: enabled
 jdk: oraclejdk8
+cache:
+  directories:
+  - $HOME/google-cloud-sdk
+services:
+  - docker
+env:
+  global:
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 addons:
   apt:
     packages:
       - oracle-java8-installer
 before_install:
   - chmod +x mvnw
+  - DECRYPT_COMMAND
 after_script:
   - docker build --build-arg db=$DATABASE_NAME --build-arg schema=$JDBC_SCHEMA --build-arg url=$JDBC_URL --build-arg username=$JDBC_USERNAME --build-arg password=$JDBC_PASSWORD .
+  - gcloud auth activate-service-account --key-file client-secret.json
+#after_success:
+#  - if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_BRANCH" == "master" ]; then ./deploy.sh; fi
