--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,9 @@
 runtime: custom
 env: flex 
-service: user-service-production
+service: default
 resources:
   cpu: 1
-  memory_gb: 1
+  memory_gb: 0.6
   disk_size_gb: 10
 manual_scaling:
   instances: 1
-
