--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -24,7 +24,7 @@ steps:
   args: ["app", "deploy", "--image-url=gcr.io/$PROJECT_ID/us-uat:latest"]
 
 secrets:
-- kmsKeyName: "projects/$PROJECT_ID/locations/global/keyRings/us-secrets/cryptoKeys/secrets-key"
+- kmsKeyName: "projects/project2-userteam/locations/global/keyRings/us-secrets/cryptoKeys/secrets-key"
   secretEnv:
     JDBC_URL: "CiQASM9lGlH2ciS2eFWdjtlZkEXBEydgZJZHgJAYGt0WGWrbEnISNgCmA8u6/pWVW26MMNravjZCETmhz95C0oMqQzfbbI8+vAH1Ycmq70oOivK1/EvLQv7so2FGJg=="
     JDBC_PASSWORD: "CiQASM9lGk1M9Mev92bPzTyEr1ul0iKLjesYNZhcJSwnJebD3gwSOgCmA8u62zVZcCET5oYB24orcn1mzJunkDIEmAvK68lEHb89a0QCedls+gIdNLt+C+xs5529UH/vTBo="
