--- a/cloudbuild/build-test.yaml
+++ b/cloudbuild/build-test.yaml
@@ -1,7 +1,7 @@
 steps:
 - name: "gcr.io/cloud-builders/mvn"
   entrypoint: "printenv"
-  args: ["JDBC_PASSWORD"]
+  args: ["JDBC_URL"]
   env: 
   -  "DATABASE_NAME=postgres"
   -  "JDBC_SCHEMA=userservice"
