--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 - name: "gcr.io/cloud-builders/mvn"
   entrypoint: "mvn"
-  args: ["install"]
+  args: ["package"]
   env: 
   -  "DATABASE_NAME=postgres"
   -  "JDBC_SCHEMA=userservice"
