--- a/k8s.yaml
+++ b/k8s.yaml
@@ -33,7 +33,7 @@ spec:
             cpu: 70m
 ---
 apiVersion: v1
-kind: LoadBalancer
+kind: Service
 metadata:
   name: user-service
 spec:
@@ -44,3 +44,4 @@ spec:
     targetPort: 8080
   selector:
     app: user-service
+  type: LoadBalancer
